#266 - reset 'create Folder popup' on close, fixed issues related to smaller screen

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -1162,6 +1162,7 @@ span.dashicons.dashicons-admin-file:before {
 		}
 		.document-expand .document-expand-anchor{
 			padding: 5px 6px;
+			min-width: 130px;
 		}
 		.document-text{
 			font-size: 12px;
