#266 - added options to add folder and document in main document page

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1427,7 +1427,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		font-size: 14px;
 	}
 }
-#media-folder-document-data-table .document-data-table-head{
+#media-stream .document-data-table-head{
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -2305,44 +2305,63 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 	}
 }
 .directory.document{
-	.subnav-filters .subnav-search{
+	.document-options{
 		position: absolute;
 		right: 0;
 		top: 0;
 		margin: 0;
-		.bp-dir-search-form{
-			background-color: #fff;
-			border: 1px solid #DEDFE2;
-			box-shadow: none;
-			border-radius: 100px;
-			margin: 0;
-			position: relative;
-			button[type=submit]{
-				position: absolute;
-				opacity: 0;
-				visibility: hidden;
-				width: 0;
-				height: 0;
-			}
-			#dir-document-search{
-				border: 0;
-				background-color: transparent;
-				padding-left: 32px;
-				font-size: 14px;
-				height: 34px;
+		a.button > i{
+			margin-right: 6px;
+		}
+		> *{
+			margin-left: 6px;
+		}
+		@media screen and (max-width: 1024px){
+			position: static;
+			margin: -20px 0 0 0;
+			> *{
+				margin-bottom: 15px;
 			}
 		}
-		
+	}
+	.subnav-filters{
+		display: inline-block;
+		vertical-align: middle;
+		.subnav-search{
+			margin: 0;
+			.bp-dir-search-form{
+				background-color: #fff;
+				border: 1px solid #DEDFE2;
+				box-shadow: none;
+				border-radius: 100px;
+				margin: 0;
+				position: relative;
+				button[type=submit]{
+					position: absolute;
+					opacity: 0;
+					visibility: hidden;
+					width: 0;
+					height: 0;
+				}
+				#dir-document-search{
+					border: 0;
+					background-color: transparent;
+					padding-left: 32px;
+					font-size: 14px;
+					height: 34px;
+				}
+			}
+		}
 	}
 }
-.document-parent{
+#media-stream.document-parent{
     background-color: #fff;
     border-radius: 4px;
-    border: 1px solid #E7E9EC;
+	border: 1px solid #E7E9EC;
+	.document-data-table-head{
+		padding: 20px 20px 8px;
+	}
 	#media-folder-document-data-table{
-		.document-data-table-head{
-			padding: 20px 20px 8px;
-		}
 		.media-folder_items{
 			margin: 0 20px;
 		}
