--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -12063,6 +12063,19 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
   margin-top: 0px;
 }
 
+#buddypress .bp-media-document-uploader #bp-media-document-prev,
+#buddypress .bp-media-document-uploader #bp-media-document-next {
+  display: none;
+}
+
+#buddypress .bp-media-document-uploader #bp-media-document-next {
+  float: right;
+}
+
+#buddypress .bp-media-document-uploader .bb-field-steps-2 {
+  padding-top: 30px;
+}
+
 #media-folder-document-data-table td.svg-document-icon {
   padding-right: 0px;
 }
