#266 - added download link in document options dropdown

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1703,6 +1703,9 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 						content: '\e937';
 						font-size: 15px;
 					}
+					&.download_file a:before{
+						content: '\e890';
+					}
 				}
 			}
 		}
