--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -12118,6 +12118,10 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
   padding: 0 0 8px;
 }
 
+#media-stream .document-data-table-head .data-head-sort-label {
+  display: none;
+}
+
 #media-stream .document-data-table-head .data-head {
   font-size: 12px;
   color: #939597;
@@ -12165,11 +12169,11 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
     justify-content: flex-end;
     padding: 10px 0;
   }
-  #media-stream .document-data-table-head:before {
-    content: 'Sort By:';
+  #media-stream .document-data-table-head .data-head-sort-label {
     position: absolute;
     left: 25px;
     font-size: 14px;
+    display: inline-block;
   }
   #media-stream .document-data-table-head .data-head-name,
   #media-stream .document-data-table-head .data-head-modified,
@@ -12292,10 +12296,19 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
   white-space: pre;
 }
 
+#media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name_edit_wrap {
+  display: none;
+  padding-right: 5px;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name_edit_wrap > a {
+  margin: 5px 0;
+}
+
 #media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name_edit {
   height: 32px;
-  display: none;
-  margin: 0 8px 8px 0;
+  width: 100%;
+  margin: 0 8px 0 0;
 }
 
 #media-folder-document-data-table .media-folder_items .media-folder_details__bottom {
