--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
@@ -1,23 +1,23 @@
 #group-messages-container {
 	background: #fff;
-	border: 1px solid #E7E9EC;
+	border: 1px solid #e7e9ec;
 	border-radius: 4px;
 	margin-bottom: 20px;
 	display: flex;
-        flex-flow: row wrap;
+	flex-flow: row wrap;
 }
 
 .bb-groups-messages-right {
 	flex: 1;
 	min-width: 0;
-        position: relative;
+	position: relative;
 
-        .medium-editor-element:not(.emojionearea),
-        .medium-editor-placeholder:not(.emojionearea) {
-            max-height: 50vh;
-            overflow-y: auto;
-            overflow-x: hidden;
-        }
+	.medium-editor-element:not(.emojionearea),
+	.medium-editor-placeholder:not(.emojionearea) {
+		max-height: 50vh;
+		overflow-y: auto;
+		overflow-x: hidden;
+	}
 }
 
 .bb-groups-messages-left {
@@ -35,65 +35,65 @@
 }
 
 .bb-panel-head {
-    border-bottom: 1px solid #E7E9EC;
-    padding: 15px 20px;
-    position: relative;
+	border-bottom: 1px solid #e7e9ec;
+	padding: 15px 20px;
+	position: relative;
 }
 
 .bb-panel-subhead {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    padding: 7px 0;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
+	padding: 7px 0;
 }
 
 #item-body .total-members-text {
-    line-height: 1;
-    margin: 0;
+	line-height: 1;
+	margin: 0;
 }
 
 .bp-group-message-wrap {
-    margin: 0 0 0 auto;
-    line-height: 1;
+	margin: 0 0 0 auto;
+	line-height: 1;
 }
 
 .bp-group-message-label {
-    font-size: 13px;
-    margin: 0;
+	font-size: 13px;
+	margin: 0;
 }
 
 #bp-group-message-content p {
-    margin-bottom: 1rem;
+	margin-bottom: 1rem;
 }
 
 .group-messages-members-listing {
 	padding: 0 20px 20px;
 
-        #buddypress & ul.item-list {
-                margin-bottom: 0;
-        }
+	#buddypress & ul.item-list {
+		margin-bottom: 0;
+	}
 }
 
 .bb-panel-footer {
-    display: none;
-    border-top: 1px solid #E7E9EC;
-    padding: 10px 20px;
-    text-align: right;
+	display: none;
+	border-top: 1px solid #e7e9ec;
+	padding: 10px 20px;
+	text-align: right;
 }
 
 .group-messages-members-listing #members-list {
-        max-height: 60vh;
-        overflow-y: auto;
-        overflow-x: hidden;
-        margin: 0 -20px;
-        padding: 0 20px;
-        width: auto;
+	max-height: 60vh;
+	overflow-y: auto;
+	overflow-x: hidden;
+	margin: 0 -20px;
+	padding: 0 20px;
+	width: auto;
 }
 
 #group-messages-container .bb-groups-messages-left .group-messages-search {
@@ -135,11 +135,11 @@
 	min-width: 100%;
 	width: 100% !important;
 	padding-left: 0;
-        height: 30px;
+	height: 30px;
 }
 
 #buddypress #send_group_message_form li:first-child .select2-search__field {
-        height: 40px;
+	height: 40px;
 }
 
 body.groups.messages .select2-dropdown .select2-results__option {
@@ -172,93 +172,93 @@ body.groups.messages span.select2-dropdown.select2-dropdown--below {
 }
 
 .bb-groups-messages-right-bottom {
-	border-top: 1px solid #E7E9EC;
-        height: 100%;
+	border-top: 1px solid #e7e9ec;
+	height: 100%;
 }
 
 .bp-select-members-wrap {
-    min-height: 94px;
+	min-height: 94px;
 }
 
 body.groups.messages #send_group_message_form .select2-container--default .select2-selection--multiple .select2-selection__choice {
-    background-color: #4D5C6D;
-    border-color: #4D5C6D;
-    font-size: 14px;
-    color: #FFF;
-    letter-spacing: -0.24px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -ms-flex-flow: row-reverse;
-    flex-flow: row-reverse;
-    padding: 0 8px;
+	background-color: #4d5c6d;
+	border-color: #4d5c6d;
+	font-size: 14px;
+	color: #fff;
+	letter-spacing: -0.24px;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-ms-flex-flow: row-reverse;
+	flex-flow: row-reverse;
+	padding: 0 8px;
 }
 
 #send_group_message_form .select2-selection__choice__remove {
-    color: #333;
-    margin-left: 7px;
-    background: #fff;
-    height: 16px;
-    width: 16px;
-    border-radius: 50%;
-    line-height: 1;
-    display: flex;
-    align-items: center;
-    font-size: 16px;
-    justify-content: center;
+	color: #333;
+	margin-left: 7px;
+	background: #fff;
+	height: 16px;
+	width: 16px;
+	border-radius: 50%;
+	line-height: 1;
+	display: flex;
+	align-items: center;
+	font-size: 16px;
+	justify-content: center;
 }
 
 #send_group_message_form .select2-selection--multiple {
-    border-color: transparent;
-    padding: 0;
+	border-color: transparent;
+	padding: 0;
 }
 
 #send_group_message_form .select2-selection__rendered {
-    display: flex;
-    align-items: center;
-    flex-flow: row wrap;
-    padding: 0;
+	display: flex;
+	align-items: center;
+	flex-flow: row wrap;
+	padding: 0;
 }
 
 #send_group_message_form .select2-search.select2-search--inline {
-    flex: 1;
-    min-width: 0;
+	flex: 1;
+	min-width: 0;
 }
 
 #send_group_message_form .select2-selection__rendered li {
-    margin: 0;
+	margin: 0;
 }
 
 #send_group_message_form li.select2-selection__choice {
-    margin-right: 10px;
-    margin-bottom: 5px;
-    margin-top: 5px;
+	margin-right: 10px;
+	margin-bottom: 5px;
+	margin-top: 5px;
 }
 
 #send_group_message_form #group-messages-toolbar {
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    padding: 20px;
+	position: relative;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	padding: 20px;
 }
 
 #send_group_message_form #group-messages-toolbar .post-elements-buttons-item {
-    margin-right: 10px;
-    position: relative;
+	margin-right: 10px;
+	position: relative;
 }
 
 div#bp-group-message-content {
-    padding: 20px;
-    height: 100%;
-    display: flex;
-    flex-flow: column;
+	padding: 20px;
+	height: 100%;
+	display: flex;
+	flex-flow: column;
 }
 
 #group-messages-container .bb-groups-messages-left .bp-messages-feedback-hide {
@@ -271,7 +271,7 @@ div#bp-group-message-content {
 	display: flex;
 	-ms-flex-flow: row wrap;
 	flex-flow: row wrap;
-        padding: 5px 0;
+	padding: 5px 0;
 	position: relative;
 	-webkit-box-align: center;
 	-ms-flex-align: center;
@@ -323,20 +323,22 @@ div#bp-group-message-content {
 }
 
 span.icons:before {
-    font-family: dashicons;
+	font-family: dashicons;
 }
 
 #bp-message-thread-list.group-message-thread {
-    .bp-single-message-wrap {
-        padding-left: 12px;
-        padding-right: 12px;
-    }
-    .bp-single-message-wrap.group-messages-highlight {
-        background: #fffced;
-        padding: 12px 11px;
-        border: 1px solid #f9efca;
-        border-radius: 5px;
-    }
+
+	.bp-single-message-wrap {
+		padding-left: 12px;
+		padding-right: 12px;
+	}
+
+	.bp-single-message-wrap.group-messages-highlight {
+		background: #fffced;
+		padding: 12px 11px;
+		border: 1px solid #f9efca;
+		border-radius: 5px;
+	}
 }
 
 #group-messages-container .select2-container--default.select2-container--disabled .select2-selection--multiple {
@@ -367,7 +369,7 @@ span.icons:before {
 .bp-single-message-content .bp-message-content-wrap p.joined {
 	color: #847d7d;
 	font-style: italic;
-	font-weight: bold;
+	font-weight: 500;
 }
 
 .total-members-text:empty {
@@ -376,10 +378,10 @@ span.icons:before {
 
 #group-messages-container .group-messages-members-listing .total-members-text {
 	color: #939597;
-        font-size: 15px;
-        font-weight: 400;
+	font-size: 15px;
+	font-weight: 400;
 	margin-bottom: 10px;
-        margin-top: 20px;
+	margin-top: 20px;
 }
 
 #group-messages-container .load-more .center {
@@ -388,16 +390,16 @@ span.icons:before {
 }
 
 .bb-group-message-info {
-    font-size: 12px;
-    font-style: italic;
-    color: #939597;
-    letter-spacing: -0.21px;
-    line-height: 1;
-    margin-top: 6px;
+	font-size: 12px;
+	font-style: italic;
+	color: #939597;
+	letter-spacing: -0.21px;
+	line-height: 1;
+	margin-top: 6px;
 
-    #buddypress & a {
-        text-decoration: underline;
-    }
+	#buddypress & a {
+		text-decoration: underline;
+	}
 }
 
 #group-messages-container .bp-message-dropdown-options-hide {
@@ -428,28 +430,28 @@ span.icons:before {
 	right: 0;
 	bottom: 0;
 	background-color: #ccc;
-	-webkit-transition: .4s;
-	transition: .4s;
+	-webkit-transition: 0.4s;
+	transition: 0.4s;
 }
 
 .bp-group-message-slider:before {
 	position: absolute;
-	content: ' ';
+	content: " ";
 	height: 14px;
 	width: 14px;
 	left: 3px;
 	bottom: 3px;
-	background-color: white;
-	-webkit-transition: .4s;
-	transition: .4s;
+	background-color: #fff;
+	-webkit-transition: 0.4s;
+	transition: 0.4s;
 }
 
 .bb-groups-messages-left-inner input:checked + .bp-group-message-slider {
-	background-color: #007CFF;
+	background-color: #007cff;
 }
 
 .bb-groups-messages-left-inner .input:focus + .bp-group-message-slider {
-	box-shadow: 0 0 1px #007CFF;
+	box-shadow: 0 0 1px #007cff;
 }
 
 .bb-groups-messages-left-inner input:checked + .bp-group-message-slider:before {
@@ -459,47 +461,48 @@ span.icons:before {
 }
 
 .bb-groups-messages-right .bb-title-wrap {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
 }
 
 .message-lists {
-    .group-thread .thread-avatar {
-        position: relative;
 
-        &:before {
-            content: '\f307';
-            font-family: dashicons;
-            font-style: normal;
-            speak: none;
-            text-decoration: inherit;
-            text-transform: none;
-            text-rendering: auto;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-            width: 18px;
-            height: 18px;
-            font-size: 14px;
-            position: absolute;
-            background: #fff;
-            color: #939597;
-            border-radius: 50%;
-            border: 1px solid;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            line-height: 1;
-            right: -6px;
-            top: 2px;
-        }
-    }
+	.group-thread .thread-avatar {
+		position: relative;
+
+		&:before {
+			content: "\f307";
+			font-family: dashicons;
+			font-style: normal;
+			speak: none;
+			text-decoration: inherit;
+			text-transform: none;
+			text-rendering: auto;
+			-webkit-font-smoothing: antialiased;
+			-moz-osx-font-smoothing: grayscale;
+			width: 18px;
+			height: 18px;
+			font-size: 14px;
+			position: absolute;
+			background: #fff;
+			color: #939597;
+			border-radius: 50%;
+			border: 1px solid;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			line-height: 1;
+			right: -6px;
+			top: 2px;
+		}
+	}
 }
 
 /* Rounded sliders */
@@ -512,19 +515,20 @@ span.icons:before {
 }
 
 .hr-text {
-	line-height: 1em;
+	line-height: 1;
 	position: relative;
 	outline: 0;
 	border: 0;
-	color: black;
+	color: #000;
 	text-align: center;
 	height: 1.5em;
-	opacity: .5;
+	opacity: 0.5;
 	width: 100%;
 	background: transparent;
 	margin: 0;
+
 	&:before {
-		content: '';
+		content: "";
 		// use the linear-gradient for the fading effect
 		// use a solid background color for a solid bar
 		background: #818078;
@@ -534,17 +538,15 @@ span.icons:before {
 		width: 100%;
 		height: 1px;
 	}
+
 	&:after {
 		content: attr(data-content);
 		position: relative;
 		display: inline-block;
-		color: black;
-
-		padding: 0 .5em;
-		line-height: 1.5em;
-		// this is really the only tricky part, you need to specify the background color of the container element...
+		padding: 0.5em;
+		line-height: 1.5;
 		color: #818078;
-		background-color: #FFFFFF;
+		background-color: #fff;
 	}
 }
 
@@ -552,83 +554,85 @@ span.icons:before {
 @media screen and (min-width: 1081px) {
 
 	.bb-groups-messages-left {
-		border-right: 1px solid #E7E9EC;
+		border-right: 1px solid #e7e9ec;
 	}
 
-        .add-more-members {
-            display: none;
-        }
+	.add-more-members {
+		display: none;
+	}
 }
 
 @media screen and (max-width: 1080px) {
-        .bb-groups-messages-left:not(.bb-select-member-view) .bb-panel-head {
-            display: none;
-        }
+
+	.bb-groups-messages-left:not(.bb-select-member-view) .bb-panel-head {
+		display: none;
+	}
 
 	.bb-groups-messages-left,
-        .bb-groups-messages-right {
+	.bb-groups-messages-right {
 		flex: 0 0 100%;
 		border-right: 0;
 	}
 
-        .group-messages-members-listing #members-list {
-                max-height: 25vh;
-        }
+	.group-messages-members-listing #members-list {
+		max-height: 25vh;
+	}
 
-        .bb-panel-footer,
-        .group-messages-search,
-        .group-messages-members-listing {
-            display: none;
-        }
+	.bb-panel-footer,
+	.group-messages-search,
+	.group-messages-members-listing {
+		display: none;
+	}
 
-        .bb-groups-messages-left.bb-select-member-view {
-            position: fixed;
-            background: rgba(0, 0, 0, 0.69);
-            content: '';
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            z-index: 999999;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
+	.bb-groups-messages-left.bb-select-member-view {
+		position: fixed;
+		background: rgba(0, 0, 0, 0.69);
+		content: "";
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		z-index: 999999;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		overflow: hidden;
 
-            .bb-groups-messages-left-inner {
-                background: #fff;
-                border-radius: 5px;
-                width: 90%;
-                max-width: 500px;
-                overflow: hidden;
-            }
+		.bb-groups-messages-left-inner {
+			background: #fff;
+			border-radius: 5px;
+			width: 90%;
+			max-width: 500px;
+			overflow: hidden;
+		}
 
-            .bb-panel-footer,
-            .group-messages-search,
-            .group-messages-members-listing  {
-                display: block;
-            }
+		.bb-panel-footer,
+		.group-messages-search,
+		.group-messages-members-listing {
+			display: block;
+		}
 
-            select.group-messages-select-members-dropdown, .add-more-members {
-                display: none;
-            }
+		select.group-messages-select-members-dropdown,
+		.add-more-members {
+			display: none;
+		}
 
-            .group-messages-members-listing {
-                padding-bottom: 0;
-            }
+		.group-messages-members-listing {
+			padding-bottom: 0;
+		}
 
-            .bb-panel-head {
-                background: #fbfbfc;
-            }
-        }
+		.bb-panel-head {
+			background: #fbfbfc;
+		}
+	}
 
-        body #buddypress .group-messages-members-listing .bp-list .action {
-            flex: 0 0 26px;
-            margin-left: auto;
-        }
-        
-        .bb-groups-messages-right .medium-editor-element:not(.emojionearea),
-        .bb-groups-messages-right .medium-editor-placeholder:not(.emojionearea) {
-            min-height: 180px;
-        }
+	body #buddypress .group-messages-members-listing .bp-list .action {
+		flex: 0 0 26px;
+		margin-left: auto;
+	}
+
+	.bb-groups-messages-right .medium-editor-element:not(.emojionearea),
+	.bb-groups-messages-right .medium-editor-placeholder:not(.emojionearea) {
+		min-height: 180px;
+	}
 }
