--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -279,6 +279,15 @@
 			margin-bottom: $marg-lrg;
 		}
 	}
+	@media screen and ( max-width: 540px ){
+
+		.single-message-thread-header .actions a[data-bp-tooltip][data-bp-tooltip-pos=left]:after {
+			max-width: 100vw;
+			white-space: normal;
+			min-width: 200px;
+		}
+
+	}
 
 } // close .bp-messages-content
 
