--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -4164,6 +4164,14 @@ div.profile_completion_wrap ul.pc_detailed_progress li.incomplete span.completed
   margin-bottom: 20px;
 }
 
+@media screen and (max-width: 540px) {
+  .bp-messages-content .single-message-thread-header .actions a[data-bp-tooltip][data-bp-tooltip-pos=left]:after {
+    max-width: 100vw;
+    white-space: normal;
+    min-width: 200px;
+  }
+}
+
 #bp-message-thread-list {
   background: #fafafa;
   border-top: 1px solid #eaeaea;
@@ -11919,6 +11927,11 @@ div#bp-group-message-content {
   font-size: 15px;
   margin: 0 auto;
   width: 100%;
+}
+
+#group-messages-container .bb-groups-messages-left .list-title > a {
+  font-size: 15px;
+  font-weight: 400;
 }
 
 #group-messages-container .bb-groups-messages-left .action button {
