--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -299,7 +299,7 @@
 			// Uncomment .acomment-reply class for icon us
 			.button:before,
 			.icons:before {
-				font-family: 'bb-icons';
+				font-family: "bb-icons";/* stylelint-disable-line */
 				font-size: 18px;
 				vertical-align: middle;
 			}
@@ -313,11 +313,11 @@
 			}
 
 			.fav:before {
-				content: '\e815';
+				content: "\e815";
 			}
 
 			.unfav:before {
-				content: '\e815';
+				content: "\e815";
 				color: #0061ac;
 			}
 
@@ -326,7 +326,7 @@
 			}
 
 			.spam-activity:before {
-				content: '\e8c9';
+				content: "\e8c9";
 			}
 
 			.delete-activity:hover {
@@ -431,9 +431,10 @@
 .ac-reply-toolbar,
 #whats-new-toolbar,
 #whats-new-messages-toolbar {
+
 	.bb-icon {
 		color: rgba(18, 43, 70, 0.4);
-		transition: all linear .2s;
+		transition: all linear 0.2s;
 		font-size: 24px;
 		width: auto;
 		height: auto;
@@ -447,18 +448,20 @@
 	}
 
 	.bb-icon-attach {
+
 		&:before {
 			font-size: 18px;
 			width: 24px;
 			display: inline-block;
 			text-align: center;
 		}
+
 	}
 
 	.emojionearea .emojionearea-button:before {
-		content: '\E821';
+		content: "\E821";
 		color: rgba(18, 43, 70, 0.4);
-		font: normal normal normal 24px/1 "bb-icons";
+		font: normal 400 normal 24px/1 bb-icons;
 		speak: none;
 		display: inline-block;
 		text-decoration: inherit;
@@ -469,7 +472,7 @@
 
 	#activity-gif-button.open .bb-icon,
 	.emojionearea .emojionearea-button.active:before {
-		color: #122B46;
+		color: #122b46;
 	}
 }
 
@@ -479,16 +482,20 @@
 .active#messages-document-button,
 .active#messages-media-button,
 .active#messages-gif-button {
+
 	.bb-icon {
-		color: #122B46;
+		color: #122b46;
 	}
+
 }
 
 .ac-reply-toolbar {
+
 	.bb-icon-attach {
 		float: left;
 		margin-top: -3px;
 	}
+
 }
 
 // link previews
@@ -704,6 +711,7 @@ blockquote.wp-embedded-content {
 }
 
 @keyframes lazyAmination {
+
 	0% {
 		background-position: 100% 0;
 	}
@@ -711,11 +719,12 @@ blockquote.wp-embedded-content {
 	100% {
 		background-position: -300% 0;
 	}
+
 }
 
 
 span.dashicons.dashicons-admin-file:before {
-	content: '\e96a';
+	content: "\e96a";
 }
 
 .activity-list .activity-item .activity-content.documemt-activity {
@@ -730,9 +739,8 @@ span.dashicons.dashicons-admin-file:before {
 	width: 100%;
 
 	.bb-activity-media-elem.document-activity {
-		border: 1px solid #E7E9EC;
+		border: 1px solid #e7e9ec;
 		border-radius: 5px;
-		padding: 15px;
 		display: inline-block;
 		width: 100%;
 		margin: 3px;
@@ -748,7 +756,7 @@ span.dashicons.dashicons-admin-file:before {
 		}
 
 		.document-text:not(.loaded):after {
-			content: '\e838';
+			content: "\e838";
 			font-family: bb-icons;
 			display: inline-block;
 			text-align: center;
@@ -780,7 +788,7 @@ span.dashicons.dashicons-admin-file:before {
 				> i {
 					font-size: 30px;
 					color: #9ca8b4;
-					margin-top: 5px
+					margin-top: 5px;
 				}
 			}
 
@@ -791,7 +799,7 @@ span.dashicons.dashicons-admin-file:before {
 				display: inline-block !important;
 				vertical-align: middle;
 				padding: 10px 0 10px 15px !important;
-				color: #122B46;
+				color: #122b46;
 
 				.document-title {
 					text-overflow: ellipsis;
@@ -833,7 +841,7 @@ span.dashicons.dashicons-admin-file:before {
 			-o-transition: all 0.3s ease;
 			transition: all 0.3s ease;
 
-			& > a {
+			> a {
 				float: left;
 				-webkit-transition: all 0.3s ease;
 				-o-transition: all 0.3s ease;
@@ -841,17 +849,19 @@ span.dashicons.dashicons-admin-file:before {
 
 				i {
 					font-size: 19px;
-					color: #9CA8B4;
+					color: #9ca8b4;
 					background-color: #fff;
 					padding: 7px;
-					border: 1px solid #E7E9EC;
+					border: 1px solid #e7e9ec;
 					border-left-width: 0;
 				}
 
 				&:hover {
+
 					i {
 						color: #461212;
 					}
+
 				}
 
 				&[data-balloon]:after {
@@ -860,22 +870,26 @@ span.dashicons.dashicons-admin-file:before {
 					padding: 5px 10px;
 				}
 
-				&[data-balloon][data-balloon-pos='down']:before {
+				&[data-balloon][data-balloon-pos="down"]:before {
 					margin-top: -1px;
 				}
 
 				&.document-action_more {
+
 					i {
 
 						border-radius: 0 3px 3px 0;
 					}
+
 				}
 
 				&.document-action_download {
+
 					i {
 						border-left-width: 1px;
 						border-radius: 3px 0 0 3px;
 					}
+
 				}
 			}
 
@@ -886,7 +900,7 @@ span.dashicons.dashicons-admin-file:before {
 				opacity: 0;
 				visibility: hidden;
 				background: #fff;
-				box-shadow: 0 2px 7px 1px rgba(0, 0, 0, .05), 0 6px 32px 0 rgba(18, 43, 70, .1);
+				box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.05), 0 6px 32px 0 rgba(18, 43, 70, 0.1);
 				border-radius: 4px;
 				width: 168px;
 				z-index: 1;
@@ -906,7 +920,7 @@ span.dashicons.dashicons-admin-file:before {
 							display: block !important;
 							font-size: 14px;
 							line-height: 1;
-							color: #7F868F;
+							color: #7f868f;
 
 							&:hover {
 								background-color: #f5f5f5 !important;
@@ -914,7 +928,7 @@ span.dashicons.dashicons-admin-file:before {
 							}
 
 							&:before {
-								font-family: 'bb-icons';
+								font-family: 'bb-icons';/* stylelint-disable-line */
 								font-size: 16px;
 								display: inline-block;
 								margin-right: 10px;
@@ -924,19 +938,19 @@ span.dashicons.dashicons-admin-file:before {
 						}
 
 						&.move_file a:before {
-							content: '\e959';
+							content: "\e959";
 							font-size: 13px;
 						}
 
 						&.delete_file a:before {
-							content: '\e937';
+							content: "\e937";
 							font-size: 15px;
 						}
 					}
 				}
 
 				&:after {
-					content: ' ';
+					content: " ";
 					position: absolute;
 					width: 0;
 					height: 0;
@@ -952,7 +966,7 @@ span.dashicons.dashicons-admin-file:before {
 					-webkit-transform: rotate(-45deg);
 					-ms-transform: rotate(-45deg);
 					transform: rotate(-45deg);
-					box-shadow: 2px -3px 3px 0 rgba(0, 0, 0, .02);
+					box-shadow: 2px -3px 3px 0 rgba(0, 0, 0, 0.02);
 					z-index: 101;
 					opacity: 1;
 					visibility: visible;
@@ -989,6 +1003,7 @@ span.dashicons.dashicons-admin-file:before {
 		}
 
 		&:hover {
+
 			.document-action-wrap {
 				opacity: 1;
 				visibility: visible;
@@ -1033,6 +1048,7 @@ span.dashicons.dashicons-admin-file:before {
 		}
 
 		&.is-mobile {
+
 			.document-action-wrap {
 				top: 28px;
 				opacity: 1;
@@ -1041,6 +1057,7 @@ span.dashicons.dashicons-admin-file:before {
 			}
 
 			&.code-full-view .document-text-wrap.is_large {
+
 				.document-action_collapse {
 					opacity: 1;
 					visibility: visible;
@@ -1058,6 +1075,7 @@ span.dashicons.dashicons-admin-file:before {
 			}
 
 			.document-text-wrap.is_large {
+
 				.document-expand {
 					opacity: 1;
 					visibility: visible;
@@ -1071,6 +1089,7 @@ span.dashicons.dashicons-admin-file:before {
 			}
 
 			.document-description-wrap .document-detail-wrap {
+
 				.document-description,
 				.document-helper-text {
 					font-size: 12px;
@@ -1103,12 +1122,15 @@ span.dashicons.dashicons-admin-file:before {
 		}
 
 		.document-text-wrap {
-			.CodeMirror {
+
+			.CodeMirror {/* stylelint-disable-line */
 				height: auto;
 			}
+
 		}
 
 		&.code-full-view {
+
 			.document-text {
 				max-height: inherit;
 				overflow: initial;
@@ -1116,9 +1138,11 @@ span.dashicons.dashicons-admin-file:before {
 				&:after {
 					display: none !important;
 				}
+
 			}
 
 			.document-action-wrap {
+
 				.document-action_collapse {
 					opacity: 1;
 					visibility: visible;
@@ -1129,11 +1153,13 @@ span.dashicons.dashicons-admin-file:before {
 						color: #461212;
 					}
 
-					& + .document-action_download {
+					+ .document-action_download {
+
 						i {
 							border-left-width: 1px;
 							border-radius: 0;
 						}
+
 					}
 				}
 			}
@@ -1151,14 +1177,16 @@ span.dashicons.dashicons-admin-file:before {
 	}
 
 	.document-action-wrap {
+
 		.document-action_collapse {
 			opacity: 0;
 			visibility: hidden;
 		}
+
 	}
 
 	.document-text-wrap {
-		border: 1px solid #E7E9EC;
+		border: 1px solid #e7e9ec;
 		border-width: 1px;
 		border-radius: 4px 4px 0 0;
 		margin: 0 15px 15px;
@@ -1166,14 +1194,15 @@ span.dashicons.dashicons-admin-file:before {
 		text-align: center;
 
 		&.is_large {
+
 			.document-text {
 				max-height: 150px;
 				overflow: hidden;
 				position: relative;
 
 				&:after {
-					content: '';
-					background: linear-gradient(0deg, white, transparent);
+					content: "";
+					background: linear-gradient(0deg, #fff, transparent);
 					position: absolute;
 					left: 0;
 					right: 0;
@@ -1181,6 +1210,7 @@ span.dashicons.dashicons-admin-file:before {
 					z-index: 11;
 					height: 75px;
 				}
+
 			}
 
 			.document-expand {
@@ -1188,18 +1218,18 @@ span.dashicons.dashicons-admin-file:before {
 				visibility: visible;
 			}
 
-			.CodeMirror {
+			.CodeMirror {/* stylelint-disable-line */
 				height: auto;
 
-				.CodeMirror-vscrollbar {
+				.CodeMirror-vscrollbar {/* stylelint-disable-line */
 					display: none !important;
 				}
 
-				.CodeMirror-sizer {
+				.CodeMirror-sizer {/* stylelint-disable-line */
 					min-height: auto !important;
 				}
 
-				.CodeMirror-scroll {
+				.CodeMirror-scroll {/* stylelint-disable-line */
 					height: auto;
 					overflow: hidden !important;
 					padding-bottom: 50px;
@@ -1211,6 +1241,7 @@ span.dashicons.dashicons-admin-file:before {
 }
 
 .bb-activity-media-wrap {
+
 	.document-filename {
 		margin: 0 0 0 4px !important;
 		font-weight: 500;
@@ -1219,23 +1250,27 @@ span.dashicons.dashicons-admin-file:before {
 
 	.more_text_view {
 		padding: 7px 15px;
-		background-color: #E7E9EC;
+		background-color: #e7e9ec;
 		word-break: break-word;
 		margin: -15px 15px 15px;
-		border: 1px solid #E7E9EC;
+		border: 1px solid #e7e9ec;
 		border-width: 0 1px 1px;
 		border-radius: 0 0 4px 4px;
 	}
+
 }
 
 @media screen and (max-width: 375px) {
+
 	.bb-activity-media-wrap .bb-activity-media-elem.document-activity {
+
 		.document-description-wrap {
 			padding: 5px 10px;
 
 			.document-detail-wrap {
 				padding-left: 10px;
 			}
+
 		}
 
 		.document-text-wrap {
