--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1283,13 +1283,13 @@ img.emojioneemoji {
 		z-index: 11;
 
 		&:before {
-			content: ' ';
+			content: " ";
 			position: absolute;
 			width: 0;
 			height: 0;
 			top: 0;
 			right: 25px;
-			border: 6px solid black;
+			border: 6px solid #000;
 			border-color: #fff #fff transparent transparent;
 			-webkit-transform-origin: 0 0;
 			-ms-transform-origin: 0 0;
@@ -1327,7 +1327,9 @@ img.emojioneemoji {
 }
 
 .media-privacy {
+
 	> li {
+
 		&:before {
 			content: "\f11f";
 			font-family: dashicons;
@@ -1390,8 +1392,8 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 	}
 
 	.dz-preview.dz-file-preview .dz-details .dz-size {
-		margin-bottom: 0px;
-		font-size: 12px;;
+		margin-bottom: 0;
+		font-size: 12px;
 	}
 
 	.dz-preview.dz-file-preview .dz-details .dz-filename {
@@ -1400,12 +1402,13 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 	}
 
 	.dz-preview.dz-file-preview .dz-details .dz-filename span {
-		margin-top: 0px;
+		margin-top: 0;
 	}
 
 }
 
 #buddypress .bp-media-document-uploader {
+
 	#bp-media-document-prev,
 	#bp-media-document-next {
 		display: none;
@@ -1414,10 +1417,11 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 	.bb-field-steps-2 {
 		padding-top: 30px;
 	}
+
 }
 
 #media-folder-document-data-table td.svg-document-icon {
-	padding-right: 0px;
+	padding-right: 0;
 }
 
 #media-folder-document-data-table td {
@@ -1433,6 +1437,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 #whats-new-attachments #forums-post-document-uploader,
 #messages-post-document-uploader,
 .activity-update-form #whats-new-attachments .activity-document-container #activity-post-document-uploader {
+
 	.dz-success-mark,
 	.dz-progress,
 	.dz-error-mark {
@@ -1442,13 +1447,14 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 	.dz-filename {
 		font-size: 14px;
 	}
+
 }
 
 #media-stream .document-data-table-head {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
-	border-bottom: 1px solid #E7E9EC;
+	border-bottom: 1px solid #e7e9ec;
 	padding: 0 0 8px;
 
 	.data-head-sort-label {
@@ -1474,11 +1480,13 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		}
 
 		&.asce {
+
 			i {
 				-webkit-transform: rotate(0deg) translateY(-1px);
 				-ms-transform: rotate(0deg) translateY(-1px);
 				transform: rotate(0deg) translateY(-1px);
 			}
+
 		}
 	}
 
@@ -1502,12 +1510,14 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		-ms-flex-pack: end;
 		justify-content: flex-end;
 		padding: 10px 0;
+
 		.data-head-sort-label {
 			position: absolute;
 			left: 25px;
 			font-size: 14px;
 			display: inline-block;
 		}
+
 		.data-head-name,
 		.data-head-modified,
 		.data-head-visibility {
@@ -1515,14 +1525,19 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 			flex-basis: auto;
 			padding-right: 15px;
 		}
+
 		.data-head-visibility {
 			padding-right: 0;
 		}
+
 	}
+
 	@media screen and (max-width: 360px) {
+
 		&:before {
 			font-size: 12px;
 		}
+
 		.data-head-name,
 		.data-head-modified,
 		.data-head-visibility {
@@ -1533,20 +1548,21 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 				font-size: 6px;
 				-webkit-transform: rotate(180deg) translateY(2px);
 				-ms-transform: rotate(180deg) translateY(2px);
-				transform: rotate(180deg) translateY(2px)
+				transform: rotate(180deg) translateY(2px);
 			}
 		}
 	}
 }
 
 #media-folder-document-data-table {
+
 	.pager {
 		margin: 20px auto;
 		width: 230px;
 
 		a.button.loading:after {
 			content: "\e838";
-			font-family: "bb-icons";
+			font-family: "bb-icons";/* stylelint-disable-line */
 			font-size: 18px;
 			line-height: 1;
 			margin-left: 10px;
@@ -1560,7 +1576,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 
 #media-folder-document-data-table .media-folder_items {
 	margin: 0;
-	border-bottom: 1px solid #E7E9EC;
+	border-bottom: 1px solid #e7e9ec;
 	padding: 15px 0;
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -1618,14 +1634,15 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		flex-flow: column;
 
 		.media-folder_name {
-			color: #122B46;
+			color: #122b46;
 			overflow: hidden;
 			text-overflow: ellipsis;
 			white-space: nowrap;
 
-			& > span {
+			> span {
 				white-space: pre;
 			}
+
 		}
 
 		.media-folder_name_edit_wrap {
@@ -1649,7 +1666,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		display: block;
 		font-size: 14px;
 		line-height: 1.3;
-		color: #4D5C6D;
+		color: #4d5c6d;
 
 		.media-folder_date {
 			display: inline-block;
@@ -1678,9 +1695,11 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		position: relative;
 
 		.media-folder_action__anchor {
+
 			i {
 				font-size: 21px;
 			}
+
 		}
 
 		.media-folder_action__list {
@@ -1695,7 +1714,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 			visibility: hidden;
 
 			&:after {
-				content: ' ';
+				content: " ";
 				position: absolute;
 				width: 0;
 				height: 0;
@@ -1704,7 +1723,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 				right: 0;
 				left: -5px;
 				box-sizing: border-box;
-				border: 6px solid black;
+				border: 6px solid #000;
 				border-color: #fff #fff transparent transparent;
 				-webkit-transform-origin: 0 0;
 				-ms-transform-origin: 0 0;
@@ -1724,20 +1743,21 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 				padding: 0;
 
 				li {
+
 					a {
 						padding: 10px 14px;
 						display: block;
 						font-size: 14px;
 						line-height: 1;
-						color: #7F868F;
+						color: #7f868f;
 
 						&:hover {
-							background-color: #F5F5F5;
+							background-color: #f5f5f5;
 							color: $blue;
 						}
 
 						&:before {
-							font-family: 'bb-icons';
+							font-family: 'bb-icons';/* stylelint-disable-line */
 							font-size: 16px;
 							display: inline-block;
 							margin-right: 10px;
@@ -1747,22 +1767,23 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 					}
 
 					&.rename_file a:before {
-						content: '\e80c';
+						content: "\e80c";
 					}
 
 					&.move_file a:before {
-						content: '\e959';
+						content: "\e959";
 						font-size: 13px;
 					}
 
 					&.delete_file a:before {
-						content: '\e937';
+						content: "\e937";
 						font-size: 15px;
 					}
 
 					&.download_file a:before {
-						content: '\e890';
+						content: "\e890";
 					}
+
 				}
 			}
 		}
@@ -1777,6 +1798,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		-ms-flex-align: start;
 		align-items: flex-start;
 		position: relative;
+
 		.media-folder_icon {
 			flex-basis: auto;
 			padding-left: 0;
@@ -1785,15 +1807,19 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 			img {
 				width: 100%;
 			}
+
 		}
+
 		.media-folder_details {
 			-ms-flex-preferred-size: 100%;
 			flex-basis: 100%;
 			width: 100%;
 		}
+
 		.media-folder_modified {
 			margin-bottom: 5px;
 		}
+
 		.media-folder_actions {
 			position: absolute;
 			right: 0;
@@ -1806,12 +1832,14 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 					left: inherit;
 					right: 9px;
 				}
+
 			}
 		}
 	}
 }
 
 .bp-media-header-wrap {
+
 	h2 {
 		float: left;
 	}
@@ -1823,20 +1851,25 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		.bb-media-actions a i {
 			margin-right: 6px;
 		}
+
 	}
 
 	@media screen and (max-width: 1440px) {
+
 		h2 {
 			width: 100%;
 		}
+
 	}
+
 	@media screen and (max-width: 1220px) {
+
 		.bb-media-actions-wrap,
 		.media-search-form {
 			width: 100%;
 			margin-bottom: 10px !important;
 
-			input[type=text] {
+			input[type="text"] {
 				width: 100% !important;
 			}
 
@@ -1844,17 +1877,24 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 			a.button {
 				width: 100%;
 			}
+
 		}
 	}
+
 	@media screen and (max-width: 782px) {
+
 		h2 {
 			float: none;
 		}
+
 		.bb-media-actions-wrap {
 			float: right;
 		}
+
 	}
+
 	@media screen and (max-width: 640px) {
+
 		.bb-media-actions-wrap {
 			float: none;
 			margin-bottom: 10px;
@@ -1866,18 +1906,20 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 			.bb-media-actions a {
 				width: 100%;
 			}
+
 		}
+
 	}
 
 	.media-search-form {
 		background-color: #fff;
-		border: 1px solid #DEDFE2;
+		border: 1px solid #dedfe2;
 		border-radius: 100px;
 		margin-bottom: 0;
 		position: relative;
 		display: inline-block;
 
-		input[type=text] {
+		input[type="text"] {
 			background: transparent;
 			border-radius: 100px;
 			border: 0;
@@ -1889,11 +1931,11 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		}
 
 		&:after {
-			content: '\e81f';
-			font-family: bb-icons;
+			content: "\e81f";
+			font-family: bb-icons;/* stylelint-disable-line */
 			display: inline-block;
 			color: #4d5c6d;
-			opacity: .4;
+			opacity: 0.4;
 			position: absolute;
 			left: 12px;
 			top: 10px;
@@ -1904,31 +1946,39 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 }
 
 .bp-document-listing {
+
 	.media-search-form {
 		float: right;
 	}
+
 }
 
 @media screen and (max-width: 1120px) {
+
 	.bp-media-header-wrap {
+
 		.media-search-form {
 			width: 100%;
 			margin: 5px 0;
 
-			input[type=text] {
+			input[type="text"] {
 				width: 100%;
 			}
+
 		}
 
 		.album-actions-wrap,
 		.bb-media-actions-wrap {
 			margin: 5px 0 !important;
 		}
+
 	}
 }
 
 #bp-media-single-folder {
+
 	.album-single-view .bp-media-header-wrap {
+
 		.bb-single-album-header {
 			padding: 0;
 			width: 30%;
@@ -1944,6 +1994,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 				text-align: left;
 				padding-top: 5px;
 			}
+
 		}
 
 		.bb-media-actions {
@@ -1953,15 +2004,16 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 			flex-basis: 70%;
 			text-align: right;
 
-			& > a {
+			> a {
 				margin-left: 10px;
 
-				& > i {
+				> i {
 					margin-right: 6px;
 				}
+
 			}
 
-			& > select {
+			> select {
 				margin-left: 10px;
 				height: 34px;
 				font-size: 14px;
@@ -1974,19 +2026,23 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 			.dropzone * {
 				text-align: center;
 			}
+
 		}
 
 		@media screen and (max-width: 1480px) {
+
 			.bp-media-header-wrap-inner {
-				webkit-box-orient: vertical;
+				webkit-box-orient: vertical;/* stylelint-disable-line */
 				-webkit-box-direction: normal;
 				-ms-flex-direction: column;
 				flex-direction: column;
 				position: relative;
 			}
+
 			.bb-single-album-header {
 				margin-bottom: 10px;
 			}
+
 			.bb-single-album-header,
 			.bb-media-actions {
 				width: 100%;
@@ -1994,22 +2050,26 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 				-ms-flex-preferred-size: 30%;
 				flex-basis: 100%;
 			}
+
 		}
+
 		@media screen and (max-width: 1220px) {
+
 			.bb-media-actions .media-folder_items {
 				position: absolute;
 				right: 0;
 				top: 3px;
 			}
+
 			.bb-media-actions > a {
 				width: 100%;
 				margin: 0 0 10px;
 			}
+
 		}
 	}
 
 	.bp-media-header-wrap {
-		margin-bottom: 15px;
 		display: inline-block;
 		width: 100%;
 		width: calc(100% + 40px);
@@ -2035,8 +2095,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 
 				&:after {
 					content: "\f345";
-					font-family: dashicons;
-					font-size: 20px;
+					font-family: dashicons;/* stylelint-disable-line */
 					vertical-align: middle;
 					font-size: 15px;
 					margin-right: 6px;
@@ -2046,9 +2105,10 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 				}
 
 				&:last-child {
+
 					a {
 						color: #393e41;
-						font-weight: bold;
+						font-weight: 600;
 					}
 
 					&:after {
@@ -2058,8 +2118,9 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 
 				a {
 					color: #939597;
-					font-weight: normal;
+					font-weight: 400;
 				}
+
 			}
 		}
 
@@ -2076,6 +2137,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 				i {
 					font-size: 21px;
 				}
+
 			}
 
 			.media-folder_action__list {
@@ -2083,7 +2145,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 				top: 33px;
 				right: -4px;
 				background: #fff;
-				box-shadow: 0 2px 7px 1px rgba(0, 0, 0, .05), 0 6px 32px 0 rgba(18, 43, 70, .1);
+				box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.05), 0 6px 32px 0 rgba(18, 43, 70, 0.1);
 				border-radius: 4px;
 				width: 168px;
 				z-index: 1;
@@ -2091,7 +2153,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 				visibility: hidden;
 
 				&:after {
-					content: ' ';
+					content: " ";
 					position: absolute;
 					width: 0;
 					height: 0;
@@ -2107,7 +2169,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 					-webkit-transform: rotate(-45deg);
 					-ms-transform: rotate(-45deg);
 					transform: rotate(-45deg);
-					box-shadow: 2px -3px 3px 0 rgba(0, 0, 0, .02);
+					box-shadow: 2px -3px 3px 0 rgba(0, 0, 0, 0.02);
 					z-index: 101;
 					opacity: 1;
 					visibility: visible;
@@ -2119,6 +2181,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 					padding: 0;
 
 					li {
+
 						.media-edit-folder {
 							display: inline-block;
 							width: 100%;
@@ -2159,23 +2222,29 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 								margin-right: 10px;
 							}
 						}
+
 					}
 				}
 			}
 
 			&.is-visible {
+
 				.media-folder_action__list {
 					opacity: 1;
 					visibility: visible;
 					z-index: 11;
 				}
+
 			}
 		}
 	}
 
 	@media screen and (max-width: 1120px) {
+
 		.album-single-view {
+
 			.bp-media-header-wrap {
+
 				.bp-media-header-wrap-inner {
 					-webkit-box-orient: vertical;
 					-webkit-box-direction: normal;
@@ -2199,7 +2268,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 					flex-basis: 100%;
 					padding-right: 25px;
 
-					& > select {
+					> select {
 						float: right;
 					}
 
@@ -2209,30 +2278,37 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 						top: 3px;
 					}
 
-					& > a {
+					> a {
 						margin-left: 0;
 						margin-right: 10px;
 					}
+
 				}
 			}
 		}
 	}
 
 	@media screen and (max-width: 640px) {
+
 		.album-single-view {
+
 			.bp-media-header-wrap {
+
 				.bb-media-actions {
 					padding-right: 0;
 
-					& > a, & > select {
+					> a,
+					> select {
 						width: 100%;
 						margin: 5px 0;
 					}
+
 				}
 
 				.bb-single-album-header .bb-title {
 					padding-right: 25px;
 				}
+
 			}
 		}
 	}
@@ -2242,6 +2318,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 #bp-media-create-folder,
 #bp-media-edit-child-folder,
 #bp-media-create-child-folder {
+
 	#bb-folder-location {
 		display: none;
 	}
@@ -2249,16 +2326,20 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 	.bb-dropdown-wrap select {
 		width: 100%;
 	}
+
 }
 
 .modal-container.has-folderlocationUI {
+
 	.bb-model-footer a {
-		&.saving, &.loading {
+
+		&.saving,
+		&.loading {
 			pointer-events: none;
 
 			&:after {
 				content: "\e838";
-				font-family: "bb-icons";
+				font-family: "bb-icons";/* stylelint-disable-line */
 				font-size: 18px;
 				line-height: 1;
 				margin-left: 10px;
@@ -2267,12 +2348,14 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 				-webkit-animation: spin 3s infinite linear;
 				animation: spin 3s infinite linear;
 			}
+
 		}
 	}
 }
 
 .bp-media-move-file,
 .bp-media-move-folder {
+
 	.bb-model-footer {
 		display: inline-block;
 		width: 100%;
@@ -2291,6 +2374,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 			&.ac-folder-close-button {
 				color: #a5a7ab;
 			}
+
 		}
 	}
 }
@@ -2299,11 +2383,11 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 	position: relative;
 
 	&:after {
-		content: '\e81f';
-		font-family: bb-icons;
+		content: "\e81f";
+		font-family: bb-icons;/* stylelint-disable-line */
 		display: inline-block;
 		color: #4d5c6d;
-		opacity: .4;
+		opacity: 0.4;
 		position: absolute;
 		left: 12px;
 		top: 12px;
@@ -2315,6 +2399,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		border-radius: 30px;
 		padding-left: 35px;
 	}
+
 }
 
 .location-folder-list-wrap-main {
@@ -2325,6 +2410,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 
 	.ac_document_search_folder_list,
 	.location-folder-list-wrap {
+
 		&.has-error {
 			border-color: #f00;
 		}
@@ -2358,7 +2444,6 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 			min-height: 230px;
 			list-style: none;
 			margin: 0;
-			padding: 0;
 			background-color: #fff;
 			border: 1px solid #e7e9ec;
 			border-radius: 4px;
@@ -2381,8 +2466,8 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 					font-size: 15px;
 
 					&:before {
-						content: '\e8ec';
-						font-family: "bb-icons";
+						content: "\e8ec";
+						font-family: bb-icons;/* stylelint-disable-line */
 						color: #939597;
 						margin-right: 10px;
 					}
@@ -2421,9 +2506,11 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 				}
 
 				&:last-child {
+
 					> span {
 						border-bottom: 0;
 					}
+
 				}
 			}
 
@@ -2435,14 +2522,17 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 				background-color: #a4acb4;
 				border-radius: 10px;
 			}
+
 		}
 	}
 
 	&.is-mobile {
+
 		.location-folder-list-wrap .location-folder-list li .sub-menu-anchor {
 			visibility: visible;
 			opacity: 1;
 		}
+
 	}
 }
 
@@ -2465,17 +2555,21 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 	}
 
 	@media screen and (max-width: 420px) {
+
 		.bb-field-steps-previous,
 		#bp-media-create-folder-submit {
 			float: none;
 			width: 100% !important;
 			margin-bottom: 10px;
 		}
+
 	}
 }
 
 @media screen and (max-width: 420px) {
+
 	.bp-media-document-uploader {
+
 		.bb-model-footer {
 			-ms-flex-direction: column;
 			flex-direction: column;
@@ -2484,11 +2578,13 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 				width: 100% !important;
 				margin-bottom: 10px;
 			}
+
 		}
 	}
 }
 
 .directory.document {
+
 	.document-options {
 		position: absolute;
 		right: 0;
@@ -2506,9 +2602,11 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		@media screen and (max-width: 1024px) {
 			position: static;
 			margin: -20px 0 0 0;
+
 			> * {
 				margin-bottom: 15px;
 			}
+
 		}
 	}
 
@@ -2521,13 +2619,13 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 
 			.bp-dir-search-form {
 				background-color: #fff;
-				border: 1px solid #DEDFE2;
+				border: 1px solid #dedfe2;
 				box-shadow: none;
 				border-radius: 100px;
 				margin: 0;
 				position: relative;
 
-				button[type=submit] {
+				button[type="submit"] {
 					position: absolute;
 					opacity: 0;
 					visibility: hidden;
@@ -2542,6 +2640,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 					font-size: 14px;
 					height: 34px;
 				}
+
 			}
 		}
 	}
@@ -2550,15 +2649,17 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 #media-stream.document-parent {
 	background-color: #fff;
 	border-radius: 4px;
-	border: 1px solid #E7E9EC;
+	border: 1px solid #e7e9ec;
 
 	.document-data-table-head {
 		padding: 20px 20px 8px;
 	}
 
 	#media-folder-document-data-table {
+
 		.media-folder_items {
 			margin: 0 20px;
 		}
+
 	}
 }
