grunt js css fixes

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_registration.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_registration.scss
@@ -197,7 +197,7 @@ body.register {
 	border-width: 1px;
 	display: none;
 	font-weight: 700;
-	margin: 10px 0 10px 0;
+	margin: 10px 0;
 	margin-bottom: 10px;
 	padding: 0.7em;
 	text-align: center;
