#266 - Fixed document UI issue im comment attachment

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_comments.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_comments.scss
@@ -71,6 +71,11 @@
 			p {
 				margin-bottom: 0.5em;
 			}
+
+			.bb-activity-media-wrap {
+				margin: 15px 0;
+			}
+
 		}
 
 		.acomment-options {
