--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -2510,7 +2510,7 @@ body.register .registration-popup .mfp-close:hover {
   border-width: 1px;
   display: none;
   font-weight: 700;
-  margin: 10px 0 10px 0;
+  margin: 10px 0;
   margin-bottom: 10px;
   padding: 0.7em;
   text-align: center;
@@ -3881,6 +3881,39 @@ div.profile_completion_wrap ul.pc_detailed_progress li.incomplete span.section_n
 
 div.profile_completion_wrap ul.pc_detailed_progress li.incomplete span.completed_staus {
   background-color: #b71717;
+}
+
+/* Send Invites Table */
+#member-invites-table .field-actions,
+#member-invites-table .field-actions-last {
+  text-align: center;
+}
+
+#member-invites-table .field-actions .field-actions-remove,
+#member-invites-table .field-actions-last .field-actions-remove {
+  cursor: pointer;
+}
+
+#member-invites-table .field-actions-add {
+  cursor: pointer;
+}
+
+#member-invites-table .field-actions-add i {
+  background-color: #000;
+  color: #fff;
+  border-radius: 100%;
+  padding: 3px 3px 1px 4px;
+  height: auto;
+  width: auto;
+  line-height: normal;
+}
+
+#member-invites-table .field-actions-add.disabled {
+  cursor: not-allowed;
+}
+
+#member-invites-table .field-actions-add.disabled i {
+  background-color: #ccc;
 }
 
 /**
