#657 Change content of Forum, Reply and Discussion when user remove from system

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_forums.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_forums.scss
@@ -1313,3 +1313,10 @@ h2.bbp-form-title.entry-title {
 	opacity: 0.6;
 	font-size: 14px;
 }
+
+p.deleted-forum-text,
+p.deleted-topic-text,
+p.deleted-reply-text {
+	font-style: italic;
+	color: #808080;
+}
