--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -2510,7 +2510,7 @@ body.register .registration-popup .mfp-close:hover {
   border-width: 1px;
   display: none;
   font-weight: 700;
-  margin: 10px 0 10px 0;
+  margin: 10px 0;
   margin-bottom: 10px;
   padding: 0.7em;
   text-align: center;
@@ -8760,6 +8760,13 @@ h2.bbp-form-title.entry-title {
 .bbp-forum-title-label span {
   opacity: 0.6;
   font-size: 14px;
+}
+
+p.deleted-forum-text,
+p.deleted-topic-text,
+p.deleted-reply-text {
+  font-style: italic;
+  color: #808080;
 }
 
 /**
