--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -8762,6 +8762,13 @@ h2.bbp-form-title.entry-title {
   font-size: 14px;
 }
 
+p.deleted-forum-text,
+p.deleted-topic-text,
+p.deleted-reply-text {
+  font-style: italic;
+  color: #808080;
+}
+
 /**
 *-------------------------------------------------------------------------------
 * @section 11.0 - Global Search classes
